--- a/css/estilo.css
+++ b/css/estilo.css
@@ -90,6 +90,8 @@ body {
  .contenedor_pie_pagina {
   width: auto;
   height:auto;
+  display: flex;
+  justify-content: space-between;
   background: rgb(25.5, 25.5, 25.5);  
    font-size: 0.3cm;
    padding: 3px  10px;
@@ -104,4 +106,10 @@ body {
 .redes{
       width: auto;
       height: 30px;
+}
+.creacion{
+   text-align: left;       
+}
+.mail{
+text-align: right;
 }
